create dynamic table body and fetch data from server

--- a/webpack4-demo/src/index.html
+++ b/webpack4-demo/src/index.html
@@ -8,7 +8,7 @@
     <title>Twinkle Cats - Webpack 4 Crash Course</title>
 </head>
 <body>
-    <h1>Welcome Catians</h1>
+    <h1 class="text-center">Welcome To Ajax Crud tutorial</h1>
     <div class="container">
         <h3 class="text-center">My ajax tutorial</h3>
         <div class="row p-5">
