--- a/webpack4-demo/src/index.html
+++ b/webpack4-demo/src/index.html
@@ -40,6 +40,39 @@
                 </tbody>
               </table>
         </div>
+        <div class="modal fade" id="contactEditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Edit contact</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <label for="edit-name" class="col-form-label">Edit name:</label>
+                      <input type="text" class="form-control" id="edit-name">
+                    </div>
+                    <div class="form-group">
+                      <label for="edit-email" class="col-form-label">Edit email</label>
+                      <input type="text" class="form-control" id="edit-email">
+                    </div>
+                    <div class="form-group">
+                      <label for="edit-phone" class="col-form-label">Edit phone:</label>
+                      <input type="text" class="form-control" id="edit-phone" placeholder="Edit phone">
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" id="updateBtn" class="btn btn-primary">save</button>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
     </div>
 
 
